--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 :root {
-  --color-text: rgb(255, 255, 255);
+  --color-text: orange;
   --color-back: rgb(255, 255, 255);
 }
 * {
@@ -13,6 +13,33 @@
   height: 0px;
   width: 0px;
   overflow: hidden;
+}
+
+.mainform {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5cqi;
+  overflow: hidden;
+}
+@media (max-width: 1000px) {
+  .mainform {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 25cqi;
+    overflow: hidden;
+  }
+}
+
+@media (max-width: 1450px) {
+  .mainform {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 7cqi;
+    overflow: hidden;
+  }
 }
 
 /* Background video CSS*/
@@ -32,6 +59,12 @@ body {
   overflow-x: hidden;
   font-family: "Poppins", sans-serif;
   font-size: 16px;
+  color: var(--color-text);
+  overflow-y: scroll;
+  padding: 0;
+  margin: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #ddd;
 }
 
 ul {
@@ -41,315 +74,6 @@ ul {
 input {
   overflow: hidden;
 }
-
-.section-title {
-  font-size: 50px;
-  font-weight: 600px;
-  font-family: "Poppins", sans-serif;
-  display: flex;
-  justify-content: center;
-  color: #00acee;
-  margin-bottom: 20px;
-}
-
-.contact-sec {
-  margin-top: 9%;
-  align-items: center;
-  display: block;
-  justify-content: center;
-}
-
-.contact-sec .contact-ul li,
-.contact-ul b {
-  font-size: 20px;
-  margin: 10px 0;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  word-wrap: break-word;
-}
-
-.contact-sec .contact-ul i {
-  font-size: 18px;
-  padding: 10px;
-  margin-right: 10px;
-  border-radius: 50%;
-}
-.contact-detail a {
-  color: #000;
-  text-decoration: none;
-}
-
-.contact-sec .contact-ul li b:hover {
-  color: #f93;
-}
-
-.contact-sec .contact-ul li .fa-location-dot {
-  color: #f44337;
-  border: 2px solid #f4433790;
-}
-
-.contact-sec .contact-ul li .fa-phone {
-  color: #00b055;
-  border: 2px solid #00b05590;
-}
-
-.contact-sec .contact-ul li .fa-envelope {
-  color: #ff6347;
-  border: 2px solid #ff634790;
-}
-
-.contact-detail span {
-  width: 400px;
-  display: flex;
-  justify-content: center;
-}
-.contact-detail span a {
-  font-size: 20px;
-  padding: 6px 12px;
-  color: #000;
-  border-radius: 50%;
-  margin: 0px 5px;
-}
-.contact-detail span .fb {
-  color: #3b5998;
-  border: 3px solid #3b5998;
-}
-.contact-detail span .fb:hover {
-  color: #fff;
-  background-color: #3b5998;
-}
-
-.contact-detail span .insta {
-  color: #833ab4;
-  border: 3px solid #833ab4;
-}
-.contact-detail span .insta:hover {
-  color: #fff;
-  background-color: #833ab4;
-}
-
-.contact-detail span .twitter {
-  color: #00acee;
-  border: 3px solid #00acee;
-}
-.contact-detail span .twitter:hover {
-  color: rgb(255, 255, 255);
-  background-color: #00acee;
-}
-
-form.contFrm {
-  max-width: 396px;
-  margin: auto;
-}
-
-.inptFld {
-  width: 100%;
-  height: 50px;
-  border: 0;
-  margin: 0 0 10px;
-  border-radius: 8px;
-  padding: 0 20px;
-  font-size: 16px;
-  color: rgb(0, 0, 0);
-}
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  margin: 0;
-}
-
-.inptFld:focus {
-  outline-offset: -4px;
-  outline: 1px solid #f93;
-}
-
-.contFrm textarea {
-  height: 75px;
-  padding-top: 5px;
-}
-.inptBtn {
-  height: 50px;
-  border: 0px;
-  background: rgb(41, 255, 3);
-  font-size: 14px;
-  color: rgb(255, 255, 255);
-  margin: auto;
-  letter-spacing: 1px;
-  cursor: pointer;
-  width: 100%;
-  max-width: 200px;
-  display: flex;
-  align-items: center;
-  padding: 2px 69px;
-}
-
-/* Responcive css Start */
-@media (max-width: 991px) {
-  .contact-sec .contact-ul li,
-  .contact-ul b {
-    font-size: 18px;
-  }
-
-  .contact-sec .contact-ul i {
-    font-size: 14px;
-    padding: 6px;
-    margin-right: 6px;
-  }
-  .inptFld {
-    height: 40px;
-    width: 100%;
-    margin: 0 0 10px;
-    padding: 0 14px;
-    font-size: 14px;
-  }
-}
-
-@media (max-width: 767px) {
-  .contact-detail span {
-    width: fit-content;
-  }
-  .contact-detail span a {
-    font-size: 18px;
-    padding: 5px 10px;
-    color: #000;
-    margin: 0px 5px 20px;
-  }
-}
-
-@media (max-width: 575px) {
-  .section-title {
-    font-size: 26px;
-    margin-top: 5%;
-    font-weight: 500;
-  }
-
-  .contact-sec .contact-ul i {
-    border: none;
-  }
-}
-
-@media (max-width: 480px) {
-  .contact-sec .contact-ul li,
-  .contact-ul b {
-    font-size: 16px;
-  }
-}
-
-/* NavBar Code */
-.nav {
-  height: 55px;
-  width: 100%;
-  background-color: black;
-  position: fixed;
-  display: block;
-  top: 0;
-  color: whitesmoke;
-}
-
-.nav > .nav-header {
-  display: inline;
-}
-
-.nav > .nav-header > .nav-title {
-  display: inline-block;
-  font-size: 22px;
-  color: #fff;
-  color: var(--color-text);
-  padding: 10px 10px 10px 10px;
-}
-
-.nav > .nav-btn {
-  display: none;
-}
-
-.nav > .nav-links {
-  display: inline;
-  float: right;
-  font-size: 18px;
-}
-
-.nav > .nav-links > a {
-  display: inline-block;
-  padding: 13px 10px 13px 10px;
-  text-decoration: none;
-  color: #efefef;
-  color: var(--color-text);
-}
-
-.nav > .nav-links > a:hover {
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-.nav > #nav-check {
-  display: none;
-}
-
-.nav-titleN {
-  display: inline-block;
-  font-size: 22px;
-  color: var(--color-text);
-  padding: 10px 10px 10px 10px;
-  position: absolute;
-  left: 40px;
-}
-
-@media (max-width: 600px) {
-  .nav > .nav-btn {
-    display: inline-block;
-    position: absolute;
-    right: 0px;
-    top: 0px;
-  }
-  .nav > .nav-btn > label {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    padding: 13px;
-  }
-  .nav > .nav-btn > label:hover,
-  .nav #nav-check:checked ~ .nav-btn > label {
-    background-color: rgba(0, 0, 0, 0.3);
-  }
-  .nav > .nav-btn > label > span {
-    display: block;
-    width: 25px;
-    height: 10px;
-    border-top: 2px solid #eee;
-    border-top: 2px solid var(--color-text);
-  }
-  .nav > .nav-links {
-    position: absolute;
-    display: block;
-    width: 100%;
-    background-color: #333;
-    height: 0px;
-    transition: all 0.3s ease-in;
-    overflow-y: hidden;
-    top: 50px;
-    left: 0px;
-  }
-  .nav > .nav-links > a {
-    display: block;
-    width: 100%;
-  }
-  .nav > #nav-check:not(:checked) ~ .nav-links {
-    height: 0px;
-  }
-  .nav > #nav-check:checked ~ .nav-links {
-    height: calc(45vh - 50px);
-    overflow-y: auto;
-  }
-}
-
-/* Logo in Nav Bar */
-#logo {
-  display: block;
-  border-radius: 200px;
-  width: 20%;
-  margin: 0px;
-}
-
 /* Background Video */
 /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
@@ -360,125 +84,150 @@ input[type="number"]::-webkit-outer-spin-button {
   min-height: 100%;
 }
 
-/* Footer */
-footer {
-  background-color: #121315;
-  color: #a7a7a7;
-  font-size: 16px;
-}
-footer * {
-  font-family: "Poppins", sans-serif;
-  box-sizing: border-box;
-  border: none;
-  outline: none;
-}
-.row {
-  padding: 1em 1em;
-}
-.row.primary {
-  display: grid;
-  flex-direction: row;
-  grid-template-columns: 2fr 1fr 1fr 2fr;
-  align-items: stretch;
-}
-.column {
+/* Form CSS */
+.container {
+  max-width: 700px;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  padding: 0 2em;
-  min-height: 3em;
-}
-footer h2 {
-  width: 100%;
-  text-align: center;
-  color: white;
-  white-space: nowrap;
-  padding: 15px 10px;
-}
-ul {
-  list-style: none;
-  display: flex;
-  text-align: center;
-  flex-direction: column;
-  padding: 0;
-  margin: 0;
-}
-li:not(:first-child) {
-  margin-top: 0.8em;
-}
-ul li a {
-  color: #a7a7a7;
-  text-decoration: none;
-}
-ul li a:hover {
-  color: #2a8ded;
-}
-.about p {
-  text-align: center;
-  line-height: 2;
-  margin: 0;
-}
-.inptBtn{
-  margin: 5% 10%;
-}
-input,
-button {
-  font-size: 1em;
-  padding: 1em;
-  width: 100%;
-  margin: 5px;
+  background-color: rgb(255, 255, 255);
+  padding: 25px 30px;
   border-radius: 5px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+}
+.container .title {
+  font-size: 25px;
+  font-weight: 500;
+  position: relative;
+}
+.container .title::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 30px;
+  border-radius: 5px;
+  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+}
+.content form .user-details {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 20px 0 12px 0;
+}
+form .user-details .input-box {
+  margin-bottom: 15px;
+  width: calc(100% / 2 - 20px);
+}
+form .input-box span.detail {
+  display: block;
+  font-weight: 500;
   margin-bottom: 5px;
 }
-button {
-  background-color: #c7940a;
-  color: #ffffff;
+#des {
+  display: block;
+  font-weight: 500 bold;
+  margin-bottom: 5px;
 }
-div.social {
+.user-details .input-box input,
+textarea {
+  height: 45px;
+  width: 100%;
+  outline: none;
+  font-size: 16px;
+  border-radius: 5px;
+  padding-left: 15px;
+  border: 1px solid #ccc;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+}
+.user-details .input-box input:focus,
+.user-details .input-box input:valid {
+  border-color: #9b59b6;
+}
+form .gender-details .gender-title {
+  font-size: 20px;
+  font-weight: 500;
+}
+form .category {
   display: flex;
-  justify-content: space-around;
-  font-size: 2.4em;
-  flex-direction: row;
-  margin-top: 0.5em;
+  width: 80%;
+  margin: 14px 0;
+  justify-content: space-between;
 }
-
-.social i {
-  color: #bac6d9;
-}
-
-.copyright {
-  padding: 0.3em 1em;
-  background-color: #25262e;
-}
-.footer-menu {
-  float: left;
-  /* margin-top: 10px; */
-}
-
-.footer-menu a {
-  color: #cfd2d6;
-  padding: 6px;
-
-  text-decoration: none;
-}
-.footer-menu a:hover {
-  color: #27bcda;
-}
-.copyright p {
-  font-size: 0.9em;
-  text-align: right;
-}
-@media screen and (max-width: 850px) {
-  .row.primary {
-    grid-template-columns: 1fr;
-  }
-}
-
-.subscribe {
+form .category label {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
-
-#element {
-  padding: 15px 15px;
+form .category label .dot {
+  height: 18px;
+  width: 18px;
+  border-radius: 50%;
+  margin-right: 10px;
+  background: #d9d9d9;
+  margin: 5px;
+  border: 5px solid transparent;
+  transition: all 0.3s ease;
+}
+#dot-1:checked ~ .category label .one,
+#dot-2:checked ~ .category label .two,
+#dot-3:checked ~ .category label .three {
+  background: #9b59b6;
+  border-color: #d9d9d9;
+}
+form input[type="radio"] {
+  display: none;
+}
+form input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+form .button {
+  height: 45px;
+  margin: 35px 0;
+}
+form .button input {
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+}
+form .button input:hover {
+  /* transform: scale(0.99); */
+  background: linear-gradient(-135deg, #71b7e6, #9b59b6);
+  color: orange;
+}
+@media (max-width: 584px) {
+  .container {
+    max-width: 100%;
+  }
+  form .user-details .input-box {
+    margin-bottom: 15px;
+    width: 100%;
+  }
+  form .category {
+    width: 100%;
+  }
+  .content form .user-details {
+    max-height: 300px;
+    overflow-y: scroll;
+  }
+  .user-details::-webkit-scrollbar {
+    width: 5px;
+  }
+}
+@media (max-width: 459px) {
+  .container .content .category {
+    flex-direction: column;
+  }
 }
