changes done in positioning of the Header

--- a/contact.css
+++ b/contact.css
@@ -96,11 +96,10 @@ input {
 .container .title {
   font-size: 25px;
   font-weight: 500;
-  position: relative;
+  padding: 10px;
 }
 .container .title::before {
   content: "";
-  position: absolute;
   left: 0;
   bottom: 0;
   height: 3px;
