--- a/contact.css
+++ b/contact.css
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 *::-webkit-scrollbar {
   height: 0px;
@@ -97,6 +98,8 @@ input {
   font-size: 25px;
   font-weight: 500;
   padding: 10px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
 }
 .container .title::before {
   content: "";
