change done in height of NavBar
As our NavBar is responsive so when user from mobile interact with navBar then in some device hight of navBar after open menu is some to small or to big.
I try to fix this problem

--- a/nav.css
+++ b/nav.css
@@ -154,7 +154,7 @@
     height: 0px;
   }
   .nav > #nav-check:checked ~ .nav-links {
-    height: calc(38vh - 50px);
+    height: 200px;
     overflow-y: auto;
     background-color: whitesmoke;
   }
