--- a/about.css
+++ b/about.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif!important;
 }
 :root {
   --color-text: rgb(255, 255, 255);
@@ -100,7 +101,9 @@ body {
   background-color: whitesmoke;
   margin: 2px;
 }
-
+#btn:hover {
+  cursor: pointer;
+}
 
 #element {
   padding: 15px 15px;
