--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+}
 body {
   margin: 0px;
   font-family: "segoe ui";
