--- a/contact.css
+++ b/contact.css
@@ -89,7 +89,7 @@ input {
 .container {
   max-width: 700px;
   width: 100%;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
   padding: 25px 30px;
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
@@ -138,13 +138,18 @@ textarea {
   font-size: 16px;
   border-radius: 5px;
   padding-left: 15px;
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   border-bottom-width: 2px;
   transition: all 0.3s ease;
 }
-.user-details .input-box input:focus,
-.user-details .input-box input:valid {
-  border-color: #9b59b6;
+.input-box textarea:is(:focus, :valid) {
+  border: 2px solid #ffb300;
+  border-bottom-width: 2px;
+  border-color: #ffaa00;
+}
+.user-details .input-box input:is(:valid, :focus) {
+  color: whitesmoke;
+  border-color: #ffaa00;
 }
 form .gender-details .gender-title {
   font-size: 20px;
@@ -174,8 +179,12 @@ form .category label .dot {
 #dot-1:checked ~ .category label .one,
 #dot-2:checked ~ .category label .two,
 #dot-3:checked ~ .category label .three {
-  background: #9b59b6;
+  background: #ffc400;
   border-color: #d9d9d9;
+}
+form input {
+  color: whitesmoke;
+  background-color: rgb(6, 5, 5);
 }
 form input[type="radio"] {
   display: none;
@@ -192,8 +201,8 @@ form .button {
   margin: 35px 0;
 }
 form .button input {
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
   border-radius: 5px;
   border: none;
   color: #ffffff;
