--- a/contact.css
+++ b/contact.css
@@ -200,7 +200,8 @@ form .button {
   height: 45px;
   margin: 35px 0;
 }
-form .button input {
+form .button input,
+button {
   /* height: 100%;
   width: 100%; */
   border-radius: 5px;
